# EventTracker

./: README.md
WatchdogsServer/: Cargo.toml
WatchdogsServer/src/: events.csv  main.rs  veranstaltungen.csv
WatchdogsServer/static/: index.html  manifest.json  sw.js
WatchdogsServer/static/css/: UnderCalendarSpace.css  darkmode-switch.css  header.css  icon-library.css  popup.css  style.css
WatchdogsServer/static/js/: Darkmode.js  ScriptCreateCalendar.js  main.js
spezification/: index.adoc  to_dos.html
spezification/chapters/: chapter01.adoc  chapter02.adoc  chapter03.adoc  chapter04.adoc  chapter05.adoc  chapter06.adoc  chapter07.adoc  chapter08.adoc  chapter09.adoc
