[package]
name = "WatchdogsServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tempdir = "0.3"